--- a/portfolio.html
+++ b/portfolio.html
@@ -18,11 +18,11 @@
         <nav class="header">
             <div class="container">
         <div class="brand">
-            <a href="home.html">   <i class="fa-solid fa-house"></i>brand</a>
+            <a href="index.html">   <i class="fa-solid fa-house"></i>brand</a>
         </div>
         <div class="items">
             <ul>
-                <li><a href="home.html">home</a></li>
+                <li><a href="index.html">home</a></li>
                 <li><a href="about.html">about</a> </li>
                 <li><a href="portfolio.html">portfoilio</a></li>
                 <li><a href="contact.html">contact</a></li>
