--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="items">
         <ul>
-            <li><a href="indexe.html">home</a></li>
+            <li><a href="index.html">home</a></li>
             <li><a href="about.html">about</a> </li>
             <li><a href="portfolio.html">portfoilio</a></li>
             <li><a href="contact.html">contact</a></li>
